src/features/BusinessFundingBanner/BusinessFundingBannerContent.module.css
.businessFundingBannerContent {
    display: flex;
    flex-direction: row;
    gap: 2.5rem;

    @media (max-width: 600px) {
        flex-direction: column;
        gap: 1.75rem;
    }
}

.businessFundingBannerContentEntry {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    flex: 1 1 50%;

    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5rem;
    font-family: 'Poppins', 'serif';
}

.businessFundingBannerContentBenefits {
    display: flex;
    flex-direction: column;
    flex: 1 1 50%;
    gap: 0.75rem;
}

.businessFundingBannerContentBenefit {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.75rem;
}

